结合jmockit和testng做测试框架